Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,7 @@
     "from matplotlib import style\n",
     "style.use('ggplot')\n",
     "\n",
-    "plt.plot(df['Iteration'],df['P_Stay_Win'])"
+    "plt.scatter(df['Iteration'],df['P_Stay_Win'])"
    ]
   },
   {
