Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -434,7 +434,8 @@
     "from matplotlib import style\n",
     "style.use('ggplot')\n",
     "\n",
-    "plt.scatter(df['Iteration'],df['P_Stay_Win'])\n"
+    "plt.scatter(df['Iteration'],df['P_Stay_Win'],'la')\n",
+    "plt.scatter(df['Iteration'],df['P_Switch_Win'])"
    ]
   },
   {
